--- a/package.json
+++ b/package.json
@@ -65,6 +65,12 @@
     ]
   },
   "dependencies": {
+    "@capacitor/app": "8.0.0",
+    "@capacitor/cli": "7.4.4",
+    "@capacitor/core": "8.0.0",
+    "@capacitor/haptics": "8.0.0",
+    "@capacitor/keyboard": "8.0.0",
+    "@capacitor/status-bar": "8.0.0",
     "@kayvan/markdown-tree-parser": "^1.6.1",
     "boxen": "^5.1.2",
     "chalk": "^4.1.2",
